<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".pantalla_menu">

    <LinearLayout
        android:id="@+id/barraSuperior"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:background="@color/mayonesa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/configuracion"
            android:contentDescription="@string/desc_boton_menu"/>

        <TextView
            android:id="@+id/tituloApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/titulo_app"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/botonNotificaciones"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:padding="6dp"
            android:src="@drawable/notification_bell_svgrepo_com"
            android:contentDescription="@string/desc_boton_notificaciones"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/barraSuperior"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <GridLayout
            android:id="@+id/gridListas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="12dp"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true"/>
    </ScrollView>

    <ImageButton
        android:id="@+id/botonAgregar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_input_add"
        android:background="@android:color/white"
        android:elevation="6dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/desc_boton_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"/>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/mayonesa"
        android:gravity="center"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/botonCalendario"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="6dp"
            android:src="@drawable/calender_svgrepo_com"
            android:contentDescription="@string/desc_boton_calendario"/>

        <ImageButton
            android:id="@+id/botonInicio"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="6dp"
            android:src="@drawable/home_svgrepo_com"
            android:contentDescription="@string/desc_boton_inicio"/>

        <ImageButton
            android:id="@+id/botonAlarma"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="6dp"
            android:src="@drawable/alarm_clock_svgrepo_com"
            android:contentDescription="@string/desc_boton_notificaciones"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
